feat: add simple steps to intro

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body
     x-data="question"
-    class="dark:bg-zinc-900 dark:text-zinc-100 bg-zinc-100 px-5"
+    class="dark:bg-zinc-900 dark:text-zinc-100 bg-zinc-100"
   >
     <h1 class="text-4xl font-extrabold tracking-wide text-center mt-8">
       Your Roadmap to Effective Questions
@@ -28,6 +28,44 @@
       >
       Elevate your questions, elevate your results.
     </p>
+
+    <section class="bg-zinc-200 dark:bg-zinc-800 grid grid-cols-2 grid-rows-2 lg:grid-cols-4 p-8 my-8">
+      <div class="p-4 max-w-80 text-center grid grid-rows-subgrid row-span-3">
+        <h2 class="text-[5rem] font-extrabold leading-none">1</h2>
+        <p class="text-2xl font-bold pb-2">Summarise</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis amet
+          quidem esse cum, aperiam ad corrupti.
+        </p>
+      </div>
+
+      <div class="p-4 max-w-80 text-center grid grid-rows-subgrid row-span-3">
+        <h2 class="text-[5rem] font-extrabold leading-none">2</h2>
+        <p class="text-2xl font-bold pb-2">Problem</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis amet
+          quidem esse cum, aperiam ad corrupti.
+        </p>
+      </div>
+
+      <div class="p-4 max-w-80 text-center grid grid-rows-subgrid row-span-3">
+        <h2 class="text-[5rem] font-extrabold leading-none">3</h2>
+        <p class="text-2xl font-bold pb-2">Explain</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis amet
+          quidem esse cum, aperiam ad corrupti.
+        </p>
+      </div>
+
+      <div class="p-4 max-w-80 text-center grid grid-rows-subgrid row-span-3">
+        <h2 class="text-[5rem] font-extrabold leading-none">4</h2>
+        <p class="text-2xl font-bold pb-2">Expectation</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis amet
+          quidem esse cum, aperiam ad corrupti.
+        </p>
+      </div>
+    </section>
 
     <section class="m-auto w-full max-w-[70ch] my-8">
       <h2 class="text-3xl mb-4" id="summarise">
